apps/base/umami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umami
  labels:
    app.kubernetes.io/name: umami
    app.kubernetes.io/component: analytics
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
