apps/base/umami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: umami
spec:
  selector:
    app: umami
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
